spacing fix

--- a/style.scss
+++ b/style.scss
@@ -246,7 +246,7 @@ nav {
     display: -moz-inline-box;
     *display: inline; /* For IE7 */
     zoom: 1; /* Trigger hasLayout */
-    width: 20%;
+    width: 19%;
     text-align: center;
   }
   a {
